crates/ruff_linter/src/rules/flake8_annotations/snapshots/ruff_linter__rules__flake8_annotations__tests__allow_overload.snap
---
source: crates/ruff_linter/src/rules/flake8_annotations/mod.rs
---
ANN201 Missing return type annotation for public function `bar`
  --> allow_overload.py:29:9
   |
29 |     def bar(i):
   |         ^^^
   |
help: Add return type annotation
