crates/ruff_linter/src/rules/flake8_annotations/snapshots/ruff_linter__rules__flake8_annotations__tests__allow_star_arg_any.snap
---
source: crates/ruff_linter/src/rules/flake8_annotations/mod.rs
---
ANN401 Dynamically typed expressions (typing.Any) are disallowed in `a`
  --> allow_star_arg_any.py:10:12
   |
10 | def foo(a: Any, *args: str, **kwargs: str) -> int:
   |            ^^^
   |

ANN401 Dynamically typed expressions (typing.Any) are disallowed in `foo`
  --> allow_star_arg_any.py:15:47
   |
15 | def foo(a: int, *args: str, **kwargs: str) -> Any:
   |                                               ^^^
   |

ANN401 Dynamically typed expressions (typing.Any) are disallowed in `a`
  --> allow_star_arg_any.py:40:29
   |
40 |     def foo_method(self, a: Any, *params: str, **options: str) -> int:
   |                             ^^^
   |

ANN401 Dynamically typed expressions (typing.Any) are disallowed in `foo_method`
  --> allow_star_arg_any.py:44:67
   |
44 |     def foo_method(self, a: int, *params: str, **options: str) -> Any:
   |                                                                   ^^^
   |
